2021-11-19  J Pascoe  <j_pascoe@apple.com>

        [WebAuthn] Add headers for [_WKWebAuthenticationPanel makeCredentialWithClientDataHash] and [_WKWebAuthenticationPanel getAssertionWithClientDataHash]
        https://bugs.webkit.org/show_bug.cgi?id=233371
        <rdar://problem/85607248>

        Reviewed by Brent Fulgham.

        These SPIs were added in https://bugs.webkit.org/show_bug.cgi?id=233216, but were not added to the header
        file _WKWebAuthenticationPanel.h, this change adds them.

        * UIProcess/API/Cocoa/_WKWebAuthenticationPanel.h:

2021-11-19  Myles C. Maxfield  <mmaxfield@apple.com>

        [WebGPU] Add converters from serializable descriptors to interface descriptors
        https://bugs.webkit.org/show_bug.cgi?id=233310

        Reviewed by Dean Jackson.

        * GPUProcess/graphics/WebGPU/WebGPUObjectHeap.cpp:
        (WebKit::WebGPU::ObjectHeap::convertAdapterFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertBindGroupFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertBindGroupLayoutFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertBufferFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertCommandBufferFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertCommandEncoderFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertComputePassEncoderFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertComputePipelineFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertDeviceFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertExternalTextureFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertGPUFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertPipelineLayoutFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertQuerySetFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertQueueFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertRenderBundleEncoderFromBacking):
        (WebKit::WebGPU::ObjectHeap::convertRenderBundleFromBacking):