@@ -1,3 +1,15 @@
+2021-11-19  Chris Dumez  <cdumez@apple.com>
+
+        Revert r282446 to bring back support for WebKitAdditions in Framework headers
+        https://bugs.webkit.org/show_bug.cgi?id=233374
+
+        Reviewed by Wenson Hsieh.
+
+        * WebKit.xcodeproj/project.pbxproj:
+        * mac/replace-webkit-additions-includes.py: Added.
+        (read_content_from_webkit_additions):
+        (main):
+
 2021-11-19  J Pascoe  <j_pascoe@apple.com>
 
         [WebAuthn] Add headers for [_WKWebAuthenticationPanel makeCredentialWithClientDataHash] and [_WKWebAuthenticationPanel getAssertionWithClientDataHash]
